--- a/index-view/kateindexviewplugin.desktop
+++ b/index-view/kateindexviewplugin.desktop
@@ -4,5 +4,5 @@ ServiceTypes=KTextEditor/Plugin
 X-KDE-Library=kateindexviewplugin
 Name=Index View
 Name[de]=Stichwortansicht
-Comment=Shows an dynamic index of the document
-Comment[de]=Zeigt ein dynamisches Stichwortverzeichnis des Dokumentes an
+Comment=Shows an dynamic index of the document (Outline)
+Comment[de]=Zeigt ein dynamisches Stichwortverzeichnis des Dokumentes (Outline)
