Prepare for Qt6
... as described here https://doc.qt.io/qt-6/portingguide.html

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,11 @@
 project(kate-plugin-index-view)
 
 cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)
-
-set(QT_MIN_VERSION "5.4.0")
+set(QT_MIN_VERSION "5.15.0")
 set(KF5_DEP_VERSION "5.13.0")
+
+# Prepare for Qt6 https://doc.qt.io/qt-6/portingguide.html
+add_compile_definitions(QT_DISABLE_DEPRECATED_BEFORE=0x050F00)
 
 find_package(ECM 1.1.0 REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
