Add new parser master class XmlTypeParser
- Use XmlTypeParser as fall back for any XML stuff
- Convert HTML entities like &amp;
- Ignore so called empty-elements
- Use lowercase as tag key
- Don't waste <empty-element/> content
- Support xslt doc type, hopefully better than the old parser but not really good

--- a/index-view/CMakeLists.txt
+++ b/index-view/CMakeLists.txt
@@ -9,6 +9,7 @@ set(kateindexviewplugin_PART_SRCS
     parser.cpp
     document_parser.cpp
     program_parser.cpp
+    xml_type_parser.cpp
     # ...and derivated classes, alphabetical ordered
     bash_parser.cpp
     cpp_parser.cpp
