Disable a line causing an error
Looks to me like a bug in /usr/share/ECM/modules/ECMQueryQt.cmake
but how can it be that it not cause trouble upstream?

As side effect we need to tell CMake to ignore some stuff
  "This section can be disabled by setting KDE_SKIP_RPATH_SETTINGS to TRUE before including this module."
  https://www.systutorials.com/docs/linux/man/7-ecm-kde-modules/

+ Disable a line causing an error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ set(KF6_DEP_VERSION "6.0.0")
 # Prepare for Qt6 https://doc.qt.io/qt-6/portingguide.html
 add_compile_definitions(QT_DISABLE_DEPRECATED_BEFORE=0x050F00)
 
+set(KDE_SKIP_RPATH_SETTINGS TRUE)
 find_package(ECM 1.1.0 REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
 
@@ -33,7 +34,7 @@ feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
 
 include(ECMOptionalAddSubdirectory)
 include(KDECompilerSettings NO_POLICY_SCOPE)
-include(KDEInstallDirs)
+# include(KDEInstallDirs) # cause error about unknown option --query
 include(KDECMakeSettings)
 include(FeatureSummary)
 
