Add hint about upstream
https://invent.kde.org/utilities/kate/-/blob/master/CMakeLists.txt?ref_type=heads

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ add_compile_definitions(QT_DISABLE_DEPRECATED_BEFORE=0x050F00)
 
 set(KDE_SKIP_RPATH_SETTINGS TRUE)
 find_package(ECM 1.1.0 REQUIRED NO_MODULE)
+# find_package(ECM ${KF6_DEP_VERSION} QUIET REQUIRED NO_MODULE) # used upstream
+
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
 
 find_package(Qt6 ${QT_MIN_VERSION} CONFIG REQUIRED Core Widgets)
