Add new parser GoParser
The Go Programming Language seems pretty simple in terms of the keywords
we need to pay attention to. I have no idea what is missing and whether
I have understood everything correctly, but it looks nice to me.

--- a/index-view/CMakeLists.txt
+++ b/index-view/CMakeLists.txt
@@ -15,6 +15,7 @@ set(kateindexviewplugin_PART_SRCS
     cpp_parser.cpp
     ecma_parser.cpp
     fortran_parser.cpp
+    go_parser.cpp
     markdown_parser.cpp
     perl_parser.cpp
     php_parser.cpp
